--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body><h1> Asesor de Seguros Generales</h1>
     <h2>Juan</h2><br>
     <p>Un seguro es un contrato, denominado Póliza de Seguro, donde la Compañía Aseguradora se obliga a indemnizarte en caso que se produzca un siniestro. El contrato de seguro puede tener por objeto toda clase de riesgos y la Aseguradora puede indemnizarte a través de un capital, una renta o la prestación de un servicio, dependiendo el caso.</p><br>
-<img src="C:\Users\cm\Desktop\practica0click\imagen\Producción-de-seguros.jpg" alt="Proteccion del seguro" width="300" height="150" >    
+<img src="./imagen/Producción-de-seguros.jpg" alt="Proteccion del seguro" width="300" height="150" >    
 </body>
 </html>
